@startuml
class EntityFactory {
    -static textureCache : map<string, Texture2D>
    +static preloadTextures() : void
    +static getTexture(path : string) : Texture2D
    +static createEnemy(code : char, x : float, y : float) : unique_ptr<DynamicEntity>
    +static createGhost(x : float, y : float) : unique_ptr<DynamicEntity>
    +static createItem(code : char, x : float, y : float) : unique_ptr<Item>
    +static createTrap(code : char, x : float, y : float) : unique_ptr<Trap>
}

class Entity {
    #x : float
    #y : float
    #width : float
    #height : float
    #isActive : bool
    +{abstract} update(dt : float) : void
    +{abstract} render(lightLevel : float) : void
    +getAABB() : Rectangle
    +{abstract} isAlive() : bool
    +destroy() : void
}

class DynamicEntity {
    #vx : float
    #vy : float
    #isGrounded : bool
    # isFacingRight : bool
    #passesThroughWalls : bool
    +applyGravity(dt : float) : void
    +move(dx : float, dy : float) : void
}

class Player {
    -health : int
    -maxHealth : int
    -bombs : int
    -ropes : int
    -gold : int
    -moveStrategy : unique_ptr<MovementStrategy>
    -isSubmerged : bool
    -isWhipping : bool
    +handleInput() : void
    +takeDamage(dmg : int) : void
    +collectGold(amount : int) : void
    +whipAttack() : void
    +setMovementStrategy(s : unique_ptr<MovementStrategy>) : void
}

interface MovementStrategy {
    +{abstract} getMoveSpeed() : float
    +{abstract} getJumpForce() : float
    +{abstract} getMaxHealth() : int
    +{abstract} getGravityScale() : float
}

class Enemy {
    #health : int
    #damage : int
    #currentStateObj : shared_ptr<EnemyState>
    +changeState(newState : shared_ptr<EnemyState>) : void
    +{abstract} takeDamage(dmg : int) : void
    +{abstract} handleIdle(dt : float, player : Player*) : void
    +{abstract} handleChase(dt : float, player : Player*) : void
    +{abstract} handleReturn(dt : float, player : Player*) : void
}

class NemesisGhost {

}

class Item {
    #type : ItemType
    #isCollected : bool
    +isShopItem : bool
    +collect() : void
    +{abstract} activate(player : Player*) : bool
}

class Chest {
    -isOpened : bool
}

class LootPickup {
    -value : int
}

class BombPickup {
    -amount : int
}

class RopePickup {
    -amount : int
}

class Trap {
    #damage : int
    +{abstract} updateTrap(dt : float, player : Player*, ...) : void
}

class ArrowTrap {
    -activated : bool
    -facingRight : bool
}

class Bomb {
    -fuseTimer : float
}

class Explosion {
    -currentFrame : int
    -frameTimer : float
}

class Bat {
    -startY : float
}

note bottom of Enemy : All Enemy subclasses and NemesisGhost\nreside in src/entities/enemies/

class Snake {
    -waitTimer : float
    -moveSpeed : float
    -direction : int
}

class Spider {
    -jumpTimer : float
}

class Particle {
    -lifetime : float
    -maxLifetime : float
}

class RopeProjectile {
    -isUnfurling : bool
    -currentLength : int
    -maxLength : int
}

Entity <|-- DynamicEntity
Entity <|-- Trap
DynamicEntity <|-- Item
Item <|-- Chest
Item <|-- LootPickup
Item <|-- BombPickup
Item <|-- RopePickup
Trap <|-- ArrowTrap
DynamicEntity <|-- Player
DynamicEntity <|-- Enemy
DynamicEntity <|-- Bomb
DynamicEntity <|-- Explosion
DynamicEntity <|-- Particle
DynamicEntity <|-- RopeProjectile
Enemy <|-- Bat
Enemy <|-- Snake
Enemy <|-- Spider
Enemy <|-- NemesisGhost
Player *-- MovementStrategy : moveStrategy

Enemy o-- EnemyState : currentStateObj
EntityFactory ..> DynamicEntity : creates
EntityFactory ..> Item : creates
EntityFactory ..> Trap : creates

Player o-- TileMap : tileMap
Player o-- LiquidSimulator : liquidSim
Enemy o-- TileMap : tileMap
Enemy o-- LiquidSimulator : liquidSim
Trap ..> TileMap : uses
@enduml